--- a/Rubik_Cube_A_Search.ipynb
+++ b/Rubik_Cube_A_Search.ipynb
@@ -6,7 +6,7 @@
       "name": "Rubik Cube A Search.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN6x99Rh+FDGtTGSR63x+88",
+      "authorship_tag": "ABX9TyN9iAubcOhAg2AX5X6J/JSx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,38 +51,16 @@
         "            Matrix[2 - i][2 - j] = Matrix[2 - j][i]\n",
         "            Matrix[2 - j][i] = temp\n",
         "\n",
-        "    return Matrix\n",
-        "M = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
-        "\n",
-        "\n",
-        "M = rot_clockwise(M)\n",
-        "print(M)\n",
-        "M = rot_clockwise(M)\n",
-        "print(M)\n",
-        "M = rot_clockwise(M)\n",
-        "print(M)\n",
-        "M = rot_clockwise(M)\n",
-        "print(M)\n",
-        "\n",
-        "print('Anti Clock')\n",
-        "\n",
-        "M = rot_anti_clockwise(M)\n",
-        "print(M)\n",
-        "M = rot_anti_clockwise(M)\n",
-        "print(M)\n",
-        "M = rot_anti_clockwise(M)\n",
-        "print(M)\n",
-        "M = rot_anti_clockwise(M)\n",
-        "print(M)"
+        "    return Matrix"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "C0beWnksHLUf",
-        "outputId": "eb130477-4c12-4045-f232-60efbf160303"
+        "outputId": "32d0a2b3-72eb-4107-b7f9-3e8677648adb"
       },
-      "execution_count": 36,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,6 +140,54 @@
         "  # R <- B\n",
         "  rubik[1][0] = B\n",
         "  return rubik\n",
+        "\n",
+        "\n",
+        "def down_rot_inv(rubik):\n",
+        "  D = rubik[5].copy() # Upper face\n",
+        "  rotated_D = rot_anti_clockwise(D)\n",
+        "  rubik[5] = rotated_D\n",
+        "\n",
+        "\n",
+        "  F = rubik[0][0].copy()\n",
+        "  L = rubik[3][0].copy()\n",
+        "  B = rubik[2][0].copy()\n",
+        "  R = rubik[1][0].copy()\n",
+        "\n",
+        "  #Esto arregla el movimiento de los colores al rededor, falta la rotación de la cara que estamos moviendo, en este caso la superios\n",
+        "  # F <- R\n",
+        "  rubik[0][2] = R\n",
+        "  # L <- F\n",
+        "  rubik[3][2] = F\n",
+        "  # B <- L\n",
+        "  rubik[2][2] = L\n",
+        "  # R <- B\n",
+        "  rubik[1][2] = B\n",
+        "  return rubik\n",
+        "\n",
+        "def down_rot(rubik):\n",
+        "  D = rubik[5].copy() # Upper face\n",
+        "  rotated_D = rot_clockwise(D)\n",
+        "  rubik[5] = rotated_D\n",
+        "\n",
+        "\n",
+        "  F = rubik[0][0].copy()\n",
+        "  L = rubik[3][0].copy()\n",
+        "  B = rubik[2][0].copy()\n",
+        "  R = rubik[1][0].copy()\n",
+        "\n",
+        "  #Esto arregla el movimiento de los colores al rededor, falta la rotación de la cara que estamos moviendo, en este caso la superios\n",
+        "  # F <- R\n",
+        "  rubik[0][2] = R\n",
+        "  # L <- F\n",
+        "  rubik[3][2] = F\n",
+        "  # B <- L\n",
+        "  rubik[2][2] = L\n",
+        "  # R <- B\n",
+        "  rubik[1][2] = B\n",
+        "  return rubik\n",
+        "\n",
+        "\n",
+        "\n",
         "    #    0,1,2,3,4,5 \n",
         "# RIGHT [F,R,B,L,U,D]\n",
         "def right_rot(rubik):\n",
@@ -202,12 +228,53 @@
         "  rubik[4][:,2] = B[::-1]\n",
         "  # F <- U\n",
         "  rubik[0][:,2] = U\n",
-        "  return rubik\n"
+        "  return rubik\n",
+        "def left_rot_inv(rubik):\n",
+        "  L = rubik[3].copy() # Left face\n",
+        "  rotated_L = rot_anti_clockwise(L)\n",
+        "  rubik[3] = rotated_L\n",
+        "\n",
+        "  F = rubik[0][:,0].copy()\n",
+        "  U = rubik[4][:,0].copy()\n",
+        "  B = rubik[2][:,2].copy()\n",
+        "  D = rubik[5][:,0].copy()\n",
+        "\n",
+        "  # U <- F\n",
+        "  rubik[4][:,0] = F\n",
+        "  # B <- U\n",
+        "  rubik[2][:,2] = U[::-1]\n",
+        "  # D <- B\n",
+        "  rubik[5][:,0] = B[::-1]\n",
+        "  # F <- D\n",
+        "  rubik[0][:,0] = D\n",
+        "  return rubik\n",
+        "\n",
+        "\n",
+        "def left_rot(rubik):\n",
+        "  L = rubik[3].copy() # Left face\n",
+        "  rotated_L = rot_clockwise(L)\n",
+        "  rubik[3] = rotated_L\n",
+        "\n",
+        "\n",
+        "  F = rubik[0][:,0].copy()\n",
+        "  U = rubik[4][:,0].copy()\n",
+        "  B = rubik[2][:,2].copy()\n",
+        "  D = rubik[5][:,0].copy()\n",
+        "\n",
+        "  # D <- F\n",
+        "  rubik[5][:,0] = F\n",
+        "  # B <- D\n",
+        "  rubik[2][:,2] = D[::-1]\n",
+        "  # U <- B\n",
+        "  rubik[4][:,0] = B[::-1]\n",
+        "  # F <- U\n",
+        "  rubik[0][:,0] = U\n",
+        "  return rubik"
       ],
       "metadata": {
         "id": "HljQG9DFuShP"
       },
-      "execution_count": 37,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -218,7 +285,7 @@
       "metadata": {
         "id": "xL4ceWRgHKni"
       },
-      "execution_count": 37,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -248,49 +315,75 @@
         "rubik = upper_rot(rubik)\n",
         "rubik = right_rot(rubik)\n",
         "rubik = upper_rot(rubik)\n",
-        "rubik = right_rot(rubik)\n",
         "rubik = upper_rot(rubik)\n",
         "rubik = right_rot_inv(rubik)\n",
         "rubik = upper_rot_inv(rubik)\n",
-        "\n",
-        "print(rubik)"
+        "print(rubik)\n",
+        "rubik = left_rot(rubik)\n",
+        "print('-------'*10)\n",
+        "#rubik = left_rot_inv(rubik)\n",
+        "print(rubik)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HveMmIcUvyjn",
-        "outputId": "d3dacf9d-4d8f-4593-a34c-76c441dcf705"
+        "outputId": "4c63b28b-4b12-4006-873d-251aec0cd45d"
       },
-      "execution_count": 40,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[[1 1 2]\n",
+            "[[[1 1 3]\n",
             "  [0 0 4]\n",
-            "  [0 0 3]]\n",
+            "  [0 0 4]]\n",
             "\n",
-            " [[1 1 4]\n",
-            "  [1 1 3]\n",
-            "  [2 1 3]]\n",
+            " [[4 0 4]\n",
+            "  [1 1 1]\n",
+            "  [1 1 1]]\n",
             "\n",
-            " [[1 0 0]\n",
-            "  [4 2 2]\n",
-            "  [4 2 2]]\n",
+            " [[1 3 3]\n",
+            "  [2 2 2]\n",
+            "  [2 2 2]]\n",
             "\n",
-            " [[1 2 5]\n",
+            " [[0 2 5]\n",
             "  [3 3 3]\n",
             "  [3 3 3]]\n",
             "\n",
             " [[4 4 2]\n",
-            "  [4 4 5]\n",
-            "  [0 0 5]]\n",
+            "  [4 4 4]\n",
+            "  [0 0 2]]\n",
             "\n",
-            " [[5 5 4]\n",
-            "  [5 5 2]\n",
-            "  [5 5 0]]]\n"
+            " [[5 5 0]\n",
+            "  [5 5 5]\n",
+            "  [5 5 5]]]\n",
+            "----------------------------------------------------------------------\n",
+            "[[[4 1 3]\n",
+            "  [4 0 4]\n",
+            "  [0 0 4]]\n",
+            "\n",
+            " [[4 0 4]\n",
+            "  [1 1 1]\n",
+            "  [1 1 1]]\n",
+            "\n",
+            " [[1 3 5]\n",
+            "  [2 2 5]\n",
+            "  [2 2 5]]\n",
+            "\n",
+            " [[3 3 0]\n",
+            "  [3 3 2]\n",
+            "  [3 3 5]]\n",
+            "\n",
+            " [[2 4 2]\n",
+            "  [2 4 4]\n",
+            "  [3 0 2]]\n",
+            "\n",
+            " [[1 5 0]\n",
+            "  [0 5 5]\n",
+            "  [0 5 5]]]\n"
           ]
         }
       ]
@@ -303,7 +396,7 @@
       "metadata": {
         "id": "fBkU2joWuRQO"
       },
-      "execution_count": 38,
+      "execution_count": 58,
       "outputs": []
     }
   ]
