--- a/Rubik_Cube_A_Search.ipynb
+++ b/Rubik_Cube_A_Search.ipynb
@@ -6,7 +6,7 @@
       "name": "Rubik Cube A Search.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN9iAubcOhAg2AX5X6J/JSx",
+      "authorship_tag": "ABX9TyNi0raP3AOlseV7Bggmivou",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,7 @@
         "            Matrix[2 - i][2 - j] = Matrix[j][2 - i]\n",
         "            Matrix[j][2 - i] = temp\n",
         "    return Matrix\n",
+        "## mirar porque esto se puede simplificar\n",
         "def rot_anti_clockwise(Matrix):\n",
         "    Matrix = Matrix.copy()\n",
         "    for i in range(1): # 0\n",
@@ -54,50 +55,38 @@
         "    return Matrix"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "C0beWnksHLUf",
-        "outputId": "32d0a2b3-72eb-4107-b7f9-3e8677648adb"
+        "id": "C0beWnksHLUf"
       },
-      "execution_count": 57,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[7 4 1]\n",
-            " [8 5 2]\n",
-            " [9 6 3]]\n",
-            "[[9 8 7]\n",
-            " [6 5 4]\n",
-            " [3 2 1]]\n",
-            "[[3 6 9]\n",
-            " [2 5 8]\n",
-            " [1 4 7]]\n",
-            "[[1 2 3]\n",
-            " [4 5 6]\n",
-            " [7 8 9]]\n",
-            "Anti Clock\n",
-            "[[3 6 9]\n",
-            " [2 5 8]\n",
-            " [1 4 7]]\n",
-            "[[9 8 7]\n",
-            " [6 5 4]\n",
-            " [3 2 1]]\n",
-            "[[7 4 1]\n",
-            " [8 5 2]\n",
-            " [9 6 3]]\n",
-            "[[1 2 3]\n",
-            " [4 5 6]\n",
-            " [7 8 9]]\n"
-          ]
-        }
-      ]
+      "execution_count": 72,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "\n",
+        "\n",
+        "#FRONT \n",
+        "def front_rot(rubik):\n",
+        "  F = rubik[0].copy() # Front face\n",
+        "  rotated_F = rot_clockwise(F)\n",
+        "  rubik[0] = rotated_F\n",
+        "  #Sacamos el estado de los cuatro \"pilares\" de la cara\n",
+        "  \n",
+        "  U = rubik[4][2].copy()\n",
+        "  R = rubik[1][:,0].copy()\n",
+        "  D = rubik[5][0].copy()\n",
+        "  L = rubik[3][:,2].copy()\n",
+        "  # R <- U\n",
+        "  rubik[1][:,0] = U \n",
+        "  # D <- R\n",
+        "  rubik[5][0] = R[::-1]\n",
+        "  # L <- D\n",
+        "  rubik[3][:,2] = D \n",
+        "  # U <- L\n",
+        "  rubik[4][2] = L[::-1]\n",
+        "  return rubik\n",
+        "\n",
         "\n",
         "# UPPER\n",
         "def upper_rot_inv(rubik):\n",
@@ -274,7 +263,7 @@
       "metadata": {
         "id": "HljQG9DFuShP"
       },
-      "execution_count": 59,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -285,7 +274,7 @@
       "metadata": {
         "id": "xL4ceWRgHKni"
       },
-      "execution_count": 57,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -318,10 +307,8 @@
         "rubik = upper_rot(rubik)\n",
         "rubik = right_rot_inv(rubik)\n",
         "rubik = upper_rot_inv(rubik)\n",
-        "print(rubik)\n",
         "rubik = left_rot(rubik)\n",
-        "print('-------'*10)\n",
-        "#rubik = left_rot_inv(rubik)\n",
+        "rubik = front_rot(rubik)\n",
         "print(rubik)\n"
       ],
       "metadata": {
@@ -329,59 +316,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HveMmIcUvyjn",
-        "outputId": "4c63b28b-4b12-4006-873d-251aec0cd45d"
+        "outputId": "6c65f444-893e-4189-93c0-b581853474a0"
       },
-      "execution_count": 58,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[[1 1 3]\n",
-            "  [0 0 4]\n",
-            "  [0 0 4]]\n",
+            "[[[0 4 4]\n",
+            "  [0 0 1]\n",
+            "  [4 4 3]]\n",
             "\n",
-            " [[4 0 4]\n",
-            "  [1 1 1]\n",
-            "  [1 1 1]]\n",
-            "\n",
-            " [[1 3 3]\n",
-            "  [2 2 2]\n",
-            "  [2 2 2]]\n",
-            "\n",
-            " [[0 2 5]\n",
-            "  [3 3 3]\n",
-            "  [3 3 3]]\n",
-            "\n",
-            " [[4 4 2]\n",
-            "  [4 4 4]\n",
-            "  [0 0 2]]\n",
-            "\n",
-            " [[5 5 0]\n",
-            "  [5 5 5]\n",
-            "  [5 5 5]]]\n",
-            "----------------------------------------------------------------------\n",
-            "[[[4 1 3]\n",
-            "  [4 0 4]\n",
-            "  [0 0 4]]\n",
-            "\n",
-            " [[4 0 4]\n",
-            "  [1 1 1]\n",
-            "  [1 1 1]]\n",
+            " [[3 0 4]\n",
+            "  [0 1 1]\n",
+            "  [2 1 1]]\n",
             "\n",
             " [[1 3 5]\n",
             "  [2 2 5]\n",
             "  [2 2 5]]\n",
             "\n",
-            " [[3 3 0]\n",
-            "  [3 3 2]\n",
-            "  [3 3 5]]\n",
+            " [[3 3 1]\n",
+            "  [3 3 5]\n",
+            "  [3 3 0]]\n",
             "\n",
             " [[2 4 2]\n",
             "  [2 4 4]\n",
-            "  [3 0 2]]\n",
+            "  [5 2 0]]\n",
             "\n",
-            " [[1 5 0]\n",
+            " [[1 1 4]\n",
             "  [0 5 5]\n",
             "  [0 5 5]]]\n"
           ]
@@ -396,7 +359,7 @@
       "metadata": {
         "id": "fBkU2joWuRQO"
       },
-      "execution_count": 58,
+      "execution_count": 74,
       "outputs": []
     }
   ]
