Back movement added

--- a/Rubik_Cube_A_Search.ipynb
+++ b/Rubik_Cube_A_Search.ipynb
@@ -6,7 +6,7 @@
       "name": "Rubik Cube A Search.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNi0raP3AOlseV7Bggmivou",
+      "authorship_tag": "ABX9TyNfvxbNF8u7G/fmRvNUAcqv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,6 +63,32 @@
     {
       "cell_type": "code",
       "source": [
+        "# BACK\n",
+        "\n",
+        "def back_rot(rubik):\n",
+        "  B = rubik[2].copy() # back face\n",
+        "  rotated_B = rot_clockwise(B)\n",
+        "  rubik[2] = rotated_B\n",
+        "  #Sacamos el estado de los cuatro \"pilares\" de la cara\n",
+        "  \n",
+        "  U = rubik[4][0].copy()\n",
+        "  R = rubik[1][:,2].copy()\n",
+        "  D = rubik[5][2].copy()\n",
+        "  L = rubik[3][:,0].copy()\n",
+        "  # R <- D\n",
+        "  rubik[1][:,2] = D[::-1]\n",
+        "  # D <- L\n",
+        "  rubik[5][2] = L\n",
+        "  # L <- U\n",
+        "  rubik[3][:,0] = U[::-1]\n",
+        "  # U <- R\n",
+        "  rubik[4][0] = R\n",
+        "  return rubik\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -86,7 +112,25 @@
         "  # U <- L\n",
         "  rubik[4][2] = L[::-1]\n",
         "  return rubik\n",
-        "\n",
+        "def front_rot_inv(rubik):\n",
+        "  F = rubik[0].copy() # Front face\n",
+        "  rotated_F = rot_anti_clockwise(F)\n",
+        "  rubik[0] = rotated_F\n",
+        "  #Sacamos el estado de los cuatro \"pilares\" de la cara\n",
+        "  \n",
+        "  U = rubik[4][2].copy()\n",
+        "  R = rubik[1][:,0].copy()\n",
+        "  D = rubik[5][0].copy()\n",
+        "  L = rubik[3][:,2].copy()\n",
+        "  # R <- D\n",
+        "  rubik[1][:,0] = D[::-1]\n",
+        "  # D <- L\n",
+        "  rubik[5][0] = L\n",
+        "  # L <- U\n",
+        "  rubik[3][:,2] = U[::-1]\n",
+        "  # U <- R\n",
+        "  rubik[4][2] = R\n",
+        "  return rubik\n",
         "\n",
         "# UPPER\n",
         "def upper_rot_inv(rubik):\n",
@@ -263,7 +307,7 @@
       "metadata": {
         "id": "HljQG9DFuShP"
       },
-      "execution_count": 73,
+      "execution_count": 78,
       "outputs": []
     },
     {
